croc/compiler_parser.d
/******************************************************************************
This module contains the parser part of the compiler.  This uses a lexer to
get a stream of tokens, and parses the tokens into an AST.

License:
Copyright (c) 2008 Jarrett Billingsley

This software is provided 'as-is', without any express or implied warranty.
In no event will the authors be held liable for any damages arising from the
use of this software.

Permission is granted to anyone to use this software for any purpose,
including commercial applications, and to alter it and redistribute it freely,
subject to the following restrictions:

    1. The origin of this software must not be misrepresented; you must not
	claim that you wrote the original software. If you use this software in a
	product, an acknowledgment in the product documentation would be
	appreciated but is not required.

    2. Altered source versions must be plainly marked as such, and must not
	be misrepresented as being the original software.

    3. This notice may not be removed or altered from any source distribution.
******************************************************************************/

module croc.compiler_parser;

import croc.api_interpreter;
import croc.api_stack;
import croc.compiler_ast;
import croc.compiler_lexer;
import croc.compiler_types;
import croc.types;

struct Parser
{
	private ICompiler c;
	private Lexer* l;
	private bool mDanglingDoc = false;
	private uword mDummyNameCounter = 0;

// ================================================================================================================================================
// Public
// ================================================================================================================================================

	/**
	*/
	public static Parser opCall(ICompiler compiler, Lexer* lexer)
	{
		Parser ret;
		ret.c = compiler;
		ret.l = lexer;
		return ret;
	}
	
	/**
	*/
	public bool danglingDoc()
	{
		return mDanglingDoc;
	}

	/**
	*/
	public char[] capture(void delegate() dg)
	{
		if(c.docComments)
		{
			auto start = l.beginCapture();
			dg();
			return l.endCapture(start);
		}
		else
		{
			dg();
			return null;
		}
	}

	/**
	*/
	public char[] parseName()
	{
		with(l.expect(Token.Ident))
			return stringValue;
	}

	/**
	*/
	public Identifier parseIdentifier()
	{
		with(l.expect(Token.Ident))
			return new(c) Identifier(c, loc, stringValue);
	}
	
	/**
	Parse a comma-separated list of expressions, such as for argument lists.
	*/
	public Expression[] parseArguments()
	{
		scope args = new List!(Expression)(c.alloc);
		args ~= parseExpression();

		while(l.type == Token.Comma)
		{
			l.next();
			args ~= parseExpression();
		}

		return args.toArray();
	}

	/**
	Parse a module.
	*/
	public Module parseModule()
	{
		auto location = l.loc;
		auto docs = l.tok.preComment;
		Decorator dec;

		if(l.type == Token.At)
			dec = parseDecorators();

		l.expect(Token.Module);

		scope names = new List!(char[])(c.alloc);
		names ~= parseName();

		while(l.type == Token.Dot)
		{
			l.next();
			names ~= parseName();
		}

		auto endLocation = l.loc;
		l.statementTerm();

		scope statements = new List!(Statement)(c.alloc);
		
		while(l.type != Token.EOF)
			statements ~= parseStatement();

		auto stmts = new(c) BlockStmt(c, location, l.loc, statements.toArray());

		mDanglingDoc = l.expect(Token.EOF).preComment !is null;
		auto ret = new(c) Module(c, location, l.loc, names.toArray(), stmts, dec);
		
		// Prevent final docs from being erroneously attached to the module
		l.tok.postComment = null;
		attachDocs(ret, docs);
		return ret;
	}

	/**
	Parse a list of statements into a function definition that takes a variadic number of arguments.

	Params:
		name = The name to use for error messages and debug locations.
	*/
	public FuncDef parseStatements(char[] name)
	{
		auto location = l.loc;

		scope statements = new List!(Statement)(c.alloc);

		while(l.type != Token.EOF)
			statements ~= parseStatement();
			
		mDanglingDoc = l.expect(Token.EOF).preComment !is null;

		auto endLocation = statements.length > 0 ? statements[statements.length - 1].endLocation : location;
		auto code = new(c) BlockStmt(c, location, endLocation, statements.toArray());
		scope params = new List!(FuncDef.Param)(c.alloc);
		params ~= FuncDef.Param(new(c) Identifier(c, l.loc, c.newString("this")));
		return new(c) FuncDef(c, location, new(c) Identifier(c, location, c.newString(name)), params.toArray(), true, code);
	}

	/**
	Parse an expression into a function definition that takes a variadic number of arguments and returns the value
	of the expression when called.

	Params:
		name = The name to use for error messages and debug locations.
	*/
	public FuncDef parseExpressionFunc(char[] name)
	{
		auto location = l.loc;

		scope statements = new List!(Statement)(c.alloc);
		scope exprs = new List!(Expression)(c.alloc);
		exprs ~= parseExpression();
		
		if(l.type != Token.EOF)
			c.exception(l.loc, "Extra unexpected code after expression");

		statements ~= new(c) ReturnStmt(c, exprs[0].location, exprs[0].endLocation, exprs.toArray());
		auto code = new(c) BlockStmt(c, location, statements[0].endLocation, statements.toArray());
		scope params = new List!(FuncDef.Param)(c.alloc);
		params ~= FuncDef.Param(new(c) Identifier(c, l.loc, c.newString("this")));
		return new(c) FuncDef(c, location, new(c) Identifier(c, location, c.newString(name)), params.toArray(), true, code);
	}
	
	/**
	Parse a statement.
	
	Params:
		needScope = If true, and the statement is a block statement, the block will be wrapped
			in a ScopeStmt.  Else, the raw block statement will be returned.
	*/
	public Statement parseStatement(bool needScope = true)
	{
		switch(l.type)
		{
			case
				Token.CharLiteral,
				Token.Colon,
				Token.Dec,
				Token.False,
				Token.FloatLiteral,
				Token.Ident,
				Token.Inc,
				Token.IntLiteral,
				Token.LBracket,
				Token.Length,
				Token.LParen,
				Token.Null,
				Token.Or,
				Token.StringLiteral,
				Token.Super,
				Token.This,
				Token.True,
				Token.Vararg,
				Token.Yield:

				return parseExpressionStmt();

			case
				Token.Class,
				Token.Function,
				Token.Global,
				Token.Local,
				Token.Namespace,
				Token.At:

				return parseDeclStmt();

			case Token.LBrace:
				if(needScope)
				{
					// don't inline this; memory management stuff.
					auto stmt = parseBlockStmt();
					return new(c) ScopeStmt(c, stmt);
				}
				else
					return parseBlockStmt();

			case Token.Assert:   return parseAssertStmt();
			case Token.Break:    return parseBreakStmt();
			case Token.Continue: return parseContinueStmt();
			case Token.Do:       return parseDoWhileStmt();
			case Token.For:      return parseForStmt();
			case Token.Foreach:  return parseForeachStmt();
			case Token.If:       return parseIfStmt();
			case Token.Import:   return parseImportStmt();
			case Token.Return:   return parseReturnStmt();
			case Token.Scope:    return parseScopeActionStmt();
			case Token.Switch:   return parseSwitchStmt();
			case Token.Throw:    return parseThrowStmt();
			case Token.Try:      return parseTryStmt();
			case Token.While:    return parseWhileStmt();

			case Token.Semicolon:
				c.exception(l.loc, "Empty statements ( ';' ) are not allowed (use {{} for an empty statement)");

			default:
				l.expected("statement");
		}
		
		assert(false);
	}

	/**
	*/
	public Statement parseExpressionStmt()
	{
		auto stmt = parseStatementExpr();
		l.statementTerm();
		return stmt;
	}
	
	/**
	*/
	public Decorator parseDecorators()
	{
		Decorator parseDecorator()
		{
			l.expect(Token.At);

			Expression func = parseIdentExp();

			while(l.type == Token.Dot)
			{
				l.next();
				auto tok = l.expect(Token.Ident);
				func = new(c) DotExp(c, func, new(c) StringExp(c, tok.loc, tok.stringValue));
			}

			Expression[] argsArr;
			Expression context;
			CompileLoc endLocation = void;

			if(l.type == Token.Dollar)
			{
				l.next();

				scope args = new List!(Expression)(c.alloc);
				args ~= parseExpression();

				while(l.type == Token.Comma)
				{
					l.next();
					args ~= parseExpression();
				}

				argsArr = args.toArray();
			}
			else if(l.type == Token.LParen)
			{
				l.next();
				
				if(l.type == Token.With)
				{
					l.next();
					
					context = parseExpression();
					
					if(l.type == Token.Comma)
					{
						l.next();
						argsArr = parseArguments();
					}
				}
				else if(l.type != Token.RParen)
					argsArr = parseArguments();

				scope(failure)
					c.alloc.freeArray(argsArr);

				endLocation = l.expect(Token.RParen).loc;
			}
			else
				endLocation = func.endLocation;

			return new(c) Decorator(c, func.location, endLocation, func, context, argsArr, null);
		}

		auto first = parseDecorator();
		auto cur = first;

		while(l.type == Token.At)
		{
			cur.nextDec = parseDecorator();
			cur = cur.nextDec;
		}

		return first;
	}

	/**
	*/
	public Statement parseDeclStmt()
	{
		Decorator deco;
		
		auto docs = l.tok.preComment;

		if(l.type == Token.At)
			deco = parseDecorators();

		switch(l.type)
		{
			case Token.Local, Token.Global:
				switch(l.peek.type)
				{
					case Token.Ident:
						if(deco !is null)
							c.exception(l.loc, "Cannot put decorators on variable declarations");

						auto ret = parseVarDecl();
						l.statementTerm();
						attachDocs(ret, docs);
						return ret;

					case Token.Function:  auto ret = parseFuncDecl(deco); attachDocs(ret.def, docs); return ret;
					case Token.Class:     auto ret = parseClassDecl(deco); attachDocs(ret.def, docs); return ret;
					case Token.Namespace: auto ret = parseNamespaceDecl(deco); attachDocs(ret.def, docs); return ret;

					default:
						c.exception(l.loc, "Illegal token '{}' after '{}'", l.peek.typeString(), l.tok.typeString());
				}

			case Token.Function:  auto ret = parseFuncDecl(deco); attachDocs(ret.def, docs); return ret;
			case Token.Class:     auto ret = parseClassDecl(deco); attachDocs(ret.def, docs); return ret;
			case Token.Namespace: auto ret = parseNamespaceDecl(deco); attachDocs(ret.def, docs); return ret;

			default:
				l.expected("Declaration");
		}

		assert(false);
	}

	/**
	Parse a local or global variable declaration.
	*/
	public VarDecl parseVarDecl()
	{
		auto location = l.loc;
		auto protection = Protection.Local;

		if(l.type == Token.Global)
		{
			protection = Protection.Global;
			l.next();
		}
		else
			l.expect(Token.Local);

		scope names = new List!(Identifier)(c.alloc);
		names ~= parseIdentifier();

		while(l.type == Token.Comma)
		{
			l.next();
			names ~= parseIdentifier();
		}

		auto namesArr = names.toArray();
		auto endLocation = namesArr[$ - 1].location;

		scope(failure)
			c.alloc.freeArray(namesArr);

		Expression[] initializer;

		if(l.type == Token.Assign)
		{
			l.next();
			scope exprs = new List!(Expression)(c.alloc);

			auto str = capture({exprs ~= parseExpression();});

			if(c.docComments)
				exprs[exprs.length - 1].sourceStr = str;

			while(l.type == Token.Comma)
			{
				l.next();

				auto valstr = capture({exprs ~= parseExpression();});

				if(c.docComments)
					exprs[exprs.length - 1].sourceStr = valstr;
			}

			initializer = exprs.toArray();
			endLocation = initializer[$ - 1].endLocation;
		}

		return new(c) VarDecl(c, location, endLocation, protection, namesArr, initializer);
	}

	/**
	Parse a function declaration, optional protection included.
	*/
	public FuncDecl parseFuncDecl(Decorator deco)
	{
		auto location = l.loc;
		auto protection = Protection.Default;

		if(l.type == Token.Global)
		{
			protection = Protection.Global;
			l.next();
		}
		else if(l.type == Token.Local)
		{
			protection = Protection.Local;
			l.next();
		}

		auto def = parseSimpleFuncDef();
		return new(c) FuncDecl(c, location, protection, def, deco);
	}
	
	/**
	Parse everything starting from the left-paren of the parameter list to the end of the body.
	
	Params:
		location = Where the function actually started.
		name = The name of the function.  Must be non-null.

	Returns:
		The completed function definition.
	*/
	public FuncDef parseFuncBody(CompileLoc location, Identifier name)
	{
		l.expect(Token.LParen);
		bool isVararg;
		auto params = parseFuncParams(isVararg);

		scope(failure)
			c.alloc.freeArray(params);

		l.expect(Token.RParen);

		Statement code;

		if(l.type == Token.Assign)
		{
			l.next;

			scope dummy = new List!(Expression)(c.alloc);
			dummy ~= parseExpression();
			auto arr = dummy.toArray();

			code = new(c) ReturnStmt(c, arr[0].location, arr[0].endLocation, arr);
		}
		else
		{
			code = parseStatement();
			
			if(!code.as!(BlockStmt))
			{
				scope dummy = new List!(Statement)(c.alloc);
				dummy ~= code;
				auto arr = dummy.toArray();
				code = new(c) BlockStmt(c, code.location, code.endLocation, arr);
			}
		}

		return new(c) FuncDef(c, location, name, params, isVararg, code);
	}
	
	/**
	Parse a function parameter list, opening and closing parens included.

	Params:
		isVararg = Return value to indicate if the parameter list ended with 'vararg'.

	Returns:
		An array of Param structs.
	*/
	public FuncDef.Param[] parseFuncParams(out bool isVararg)
	{
		alias FuncDef.Param Param;
		alias FuncDef.TypeMask TypeMask;
		scope ret = new List!(Param)(c.alloc);
		
		scope(failure)
			foreach(ref p; ret)
				c.alloc.freeArray(p.classTypes);

		void parseParam()
		{
			Param p = void;
			p.name = parseIdentifier();

			if(l.type == Token.Colon)
			{
				l.next();
				p.typeMask = parseParamType(p.classTypes, p.typeString);
			}
			else
			{
				p.typeMask = TypeMask.Any;
				p.classTypes = null;
				p.typeString = null;
			}

			if(l.type == Token.Assign)
			{
				l.next();
				p.valueString = capture({p.defValue = parseExpression();});

				// Having a default parameter implies allowing null as a parameter type
				p.typeMask |= TypeMask.Null;
			}
			else
			{
				p.defValue = null;
				p.valueString = null;
			}

			ret ~= p;
		}

		void parseRestOfParams()
		{
			while(l.type == Token.Comma)
			{
				l.next();

				if(l.type == Token.Vararg)
				{
					isVararg = true;
					l.next();
					break;
				}

				parseParam();
			}
		}

		if(l.type == Token.This)
		{
			Param p = void;
			p.name = new(c) Identifier(c, l.loc, c.newString("this"));

			l.next();
			l.expect(Token.Colon);
			p.typeMask = parseParamType(p.classTypes, p.typeString);
			p.defValue = null;
			p.valueString = null;

			ret ~= p;

			if(l.type == Token.Comma)
				parseRestOfParams();
		}
		else
		{
			ret ~= Param(new(c) Identifier(c, l.loc, c.newString("this")));

			if(l.type == Token.Ident)
			{
				parseParam();
				parseRestOfParams();
			}
			else if(l.type == Token.Vararg)
			{
				isVararg = true;
				l.next();
			}
		}

		return ret.toArray();
	}

	/**
	Parse a parameter type.  This corresponds to the Type element of the grammar.
	Returns the type mask, as well as an optional list of class types that this
	parameter can accept in the classTypes parameter.
	*/
	public uint parseParamType(out Expression[] classTypes, out char[] typeString)
	{
		alias FuncDef.TypeMask TypeMask;

		uint ret = 0;
		scope objTypes = new List!(Expression)(c.alloc);

		void addConstraint(CrocValue.Type t)
		{
			if((ret & (1 << cast(uint)t)) && t != CrocValue.Type.Instance)
				c.exception(l.loc, "Duplicate parameter type constraint for type '{}'", CrocValue.typeStrings[t]);

			ret |= 1 << cast(uint)t;
		}

		Expression parseIdentList(Token t)
		{
			l.next();
			auto t2 = l.expect(Token.Ident);
			auto exp = new(c) DotExp(c, new(c) IdentExp(c, new(c) Identifier(c, t.loc, t.stringValue)), new(c) StringExp(c, t2.loc, t2.stringValue));

			while(l.type == Token.Dot)
			{
				l.next();
				t2 = l.expect(Token.Ident);
				exp = new(c) DotExp(c, exp, new(c) StringExp(c, t2.loc, t2.stringValue));
			}

			return exp;
		}

		void parseSingleType()
		{
			switch(l.type)
			{
				case Token.Null:      addConstraint(CrocValue.Type.Null);      l.next(); break;
				case Token.Function:  addConstraint(CrocValue.Type.Function);  l.next(); break;
				case Token.Namespace: addConstraint(CrocValue.Type.Namespace); l.next(); break;
				case Token.Class:     addConstraint(CrocValue.Type.Class);     l.next(); break;

				default:
					auto t = l.expect(Token.Ident);

					if(l.type == Token.Dot)
					{
						addConstraint(CrocValue.Type.Instance);
						objTypes ~= parseIdentList(t);
					}
					else
					{
						switch(t.stringValue)
						{
							case "bool":      addConstraint(CrocValue.Type.Bool); break;
							case "int":       addConstraint(CrocValue.Type.Int); break;
							case "float":     addConstraint(CrocValue.Type.Float); break;
							case "char":      addConstraint(CrocValue.Type.Char); break;
							case "string":    addConstraint(CrocValue.Type.String); break;
							case "table":     addConstraint(CrocValue.Type.Table); break;
							case "array":     addConstraint(CrocValue.Type.Array); break;
							case "memblock":  addConstraint(CrocValue.Type.Memblock); break;
							case "thread":    addConstraint(CrocValue.Type.Thread); break;
							case "nativeobj": addConstraint(CrocValue.Type.NativeObj); break;
							case "weakref":   addConstraint(CrocValue.Type.WeakRef); break;
							case "funcdef":   addConstraint(CrocValue.Type.FuncDef); break;

							case "instance":
								addConstraint(CrocValue.Type.Instance);

								if(l.type == Token.LParen)
								{
									l.next();
									objTypes ~= parseExpression();
									l.expect(Token.RParen);
								}
								else if(l.type == Token.Ident)
								{
									auto tt = l.expect(Token.Ident);

									if(l.type == Token.Dot)
										objTypes ~= parseIdentList(tt);
									else
										objTypes ~= new(c) IdentExp(c, new(c) Identifier(c, tt.loc, tt.stringValue));
								}
								else if(l.type != Token.Or && l.type != Token.Comma && l.type != Token.RParen && l.type != Token.Arrow)
									l.expected("class type");

								break;

							default:
								addConstraint(CrocValue.Type.Instance);
								objTypes ~= new(c) IdentExp(c, new(c) Identifier(c, t.loc, t.stringValue));
								break;
						}
					}
					break;
			}
		}

		typeString = capture(
		{

			if(l.type == Token.Not)
			{
				l.next();
				l.expect(Token.Null);
				ret = TypeMask.NotNull;
			}
			else if(l.type == Token.Ident && l.tok.stringValue == "any")
			{
				l.next();
				ret = TypeMask.Any;
			}
			else
			{
				while(true)
				{
					parseSingleType();
	
					if(l.type == Token.Or)
						l.next;
					else
						break;
				}
			}
	
			assert(ret !is 0);
			classTypes = objTypes.toArray();
		});

		return ret;
	}

	/**
	Parse a simple function declaration.  This is basically a function declaration without
	any preceding 'local' or 'global'.  The function must have a name.
	*/
	public FuncDef parseSimpleFuncDef()
	{
		auto location = l.expect(Token.Function).loc;
		auto name = parseIdentifier();
		return parseFuncBody(location, name);
	}
	
	/**
	Parse a function literal.  The name is optional, and one will be autogenerated for the
	function if none exists.
	*/
	public FuncDef parseFuncLiteral()
	{
		auto location = l.expect(Token.Function).loc;

		Identifier name;

		if(l.type == Token.Ident)
			name = parseIdentifier();
		else
			name = dummyFuncLiteralName(location);

		return parseFuncBody(location, name);
	}
	
	/**
	Parse a Haskell-style function literal, like "\f -> f + 1" or "\a, b { ... }".
	*/
	public FuncDef parseHaskellFuncLiteral()
	{
		auto location = l.expect(Token.Backslash).loc;
		auto name = dummyFuncLiteralName(location);

		bool isVararg;
		auto params = parseFuncParams(isVararg);

		scope(failure)
			c.alloc.freeArray(params);
			
		Statement code;

		if(l.type == Token.Arrow)
		{
			l.next();

			scope dummy = new List!(Expression)(c.alloc);
			dummy ~= parseExpression();
			auto arr = dummy.toArray();

			code = new(c) ReturnStmt(c, arr[0].location, arr[0].endLocation, arr);
		}
		else
			code = parseBlockStmt();

		return new(c) FuncDef(c, location, name, params, isVararg, code);
	}

	/**
	Parse a class declaration, optional protection included.
	*/
	public ClassDecl parseClassDecl(Decorator deco)
	{
		auto location = l.loc;
		auto protection = Protection.Default;

		if(l.type == Token.Global)
		{
			protection = Protection.Global;
			l.next();
		}
		else if(l.type == Token.Local)
		{
			protection = Protection.Local;
			l.next();
		}

		auto def = parseClassDef(false);
		return new(c) ClassDecl(c, location, protection, def, deco);
	}

	/**
	Parse a class definition.  

	Params:
		nameOptional = If true, the name is optional (such as with class literal expressions).
			Otherwise, the name is required (such as with class declarations).

	Returns:
		An instance of ClassDef.
	*/
	public ClassDef parseClassDef(bool nameOptional)
	{
		auto location = l.expect(Token.Class).loc;

		Identifier name;

		if(nameOptional)
		{
			if(l.type == Token.Ident)
				name = parseIdentifier();
			else
				name = dummyClassLiteralName(location);
		}
		else
			name = parseIdentifier();

		Expression baseClass;

		if(l.type == Token.Colon)
		{
			l.next();
			baseClass.sourceStr = capture({baseClass = parseExpression();});
		}
		else
		{
			baseClass = new(c) IdentExp(c, new(c) Identifier(c, l.loc, c.newString("Object")));
			baseClass.sourceStr = null;
		}

		l.expect(Token.LBrace);

		auto fieldMap = newTable(c.thread);

		scope(exit)
			pop(c.thread);

		alias ClassDef.Field Field;
		scope fields = new List!(Field)(c.alloc);

		void addField(Identifier name, Expression v, char[] preDocs)
		{
			pushString(c.thread, name.name);

			if(opin(c.thread, -1, fieldMap))
			{
				pop(c.thread);
				c.exception(name.location, "Redeclaration of field '{}'", name.name);
			}

			pushBool(c.thread, true);
			idxa(c.thread, fieldMap);
			fields ~= Field(name.name, v);

			// Stupid no ref returns and stupid compiler not diagnosing this.. stupid stupid
			auto tmp = fields[fields.length - 1];
			attachDocs(&tmp, preDocs);
			fields[fields.length - 1] = tmp;
		}

		void addMethod(FuncDef m, char[] preDocs)
		{
			addField(m.name, new(c) FuncLiteralExp(c, m.location, m), preDocs);
			m.docs = fields[fields.length - 1].docs;
		}

		while(l.type != Token.RBrace)
		{
			auto docs = l.tok.preComment;

			switch(l.type)
			{
				case Token.Function:
					addMethod(parseSimpleFuncDef(), docs);
					break;

				case Token.This:
